--- a/index.html/index.html
+++ b/index.html/index.html
@@ -52,7 +52,7 @@ section {
 </style>
 </head>
 <body>
-<img src="Capacita SM.png" alt="Logo Capacita SM" id="logo">
+<img src="Capacita SM.png" alt="Capacita SM" id="logo">
 <h1>Capacita SM - Plataforma de Capacitación</h1>
 
 <section id="menuPrincipal">
