--- a/index.html/index.html
+++ b/index.html/index.html
@@ -8,7 +8,8 @@
 <style>
 body {
     font-family: Arial, sans-serif;
-    background-color: #A3C95A;
+    background: url('fondo.png') no-repeat center center fixed;
+    background-size: cover;
     padding: 20px;
     max-width: 900px;
     margin: auto;
@@ -29,7 +30,7 @@ button {
     cursor: pointer;
 }
 section {
-    background-color: #fff;
+    background-color: rgba(255,255,255,0.9);
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 30px;
@@ -52,7 +53,7 @@ section {
 </style>
 </head>
 <body>
-<img src="logo.png" alt="logo" id="logo">
+<img src="logo.png" alt="Logo Capacita SM" id="logo">
 <h1>Capacita SM - Plataforma de Capacitación</h1>
 
 <section id="menuPrincipal">
