--- a/index.html/index.html
+++ b/index.html/index.html
@@ -55,7 +55,7 @@ body {
     <button onclick="mostrarEmpresa()">Empresa</button>
 </section>
 </body>
-
+</html>
 <section id="seccionTrabajador">
     <h2>Acceso Trabajador</h2>
     <input type="text" id="rutAcceso" placeholder="Ingrese su RUT">
