--- a/index.html/index.html
+++ b/index.html/index.html
@@ -68,8 +68,8 @@ body {
 <body>
 <section id="menuPrincipal">
     <h2>Acceso</h2>
-    <button onclick="mostrarTrabajador()">Acceso Trabajador</button>
-    <button onclick="mostrarEmpresa()">Acceso Empresa</button>
+    <button onclick="mostrarTrabajador()">Trabajador</button>
+    <button onclick="mostrarEmpresa()">Empresas</button>
 </section>
 
 <section id="seccionTrabajador">
